fix z-index prevQ and nextQ

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1413,7 +1413,6 @@ $minwidth: 320px;
    -webkit-transition: 0.5s ease;
    transition: 0.6s ease;
    background: #47f00c;
-   z-index: 3;
 }
 .prev-quistion {
    padding: 8px 10px;
